atualizando a JRE